platform-enterprise_versioned_docs/version-23.3/monitoring/dashboard.md
---
title: "Dashboard"
description: "View run status overview in Seqera Platform."
date: "21 Apr 2023"
tags: [dashboard, runs, monitoring]
---

The Seqera Platform **Dashboard**, accessed from the user menu, provides an overview of pipeline runs in your personal and organization workspaces.

### Filters and summary

The **Dashboard** view defaults to all organizations and workspaces you can access. Select the **View** dropdown menu to filter by specific organizations and workspaces, or to view statistics for your personal workspace only.

You can filter by time, including a custom date range of up to 12 months. To filter the set of pipeline runs, select **Filter**. When a filter is applied, the button icon and color changes.

### Export data

Select **Export data** in the filter panel near the top of the page to export dashboard data, based on the filters you have applied, in a CSV file.

### Pipeline runs per organization

Pipeline run totals for your selected filters are displayed for each organization that you have access to.

Depending on the filter selected, each card details a separate workspace or organization. Total pipeline runs for each organization are arranged by workspace and status.

For a detailed view of runs, you can do one of the following:

- Select a pipeline run integer value in the table to navigate to a list filtered by the status and time range selected.
- Select a workspace name in the table to navigate to a list filtered by the workspace selected.
